--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <header id="home" class="hero">
     <div class="hero-inner">
       <div class="reveal">
-        <span class="chip"><i></i> Тёмный минимализм с красными акцентами</span>
+        <span class="chip"><i></i> DREGO DESIGN</span>
         <h1>Красиво. Быстро. Понятно.<br/>Анимации без перегруза.</h1>
-        <p>Статический сайт для GitHub Pages. Контент редактируется в <code>data/content.json</code>.</p>
+        <p>Сайт созданный для нашего сквада <code>.AMAMAM.</code>.</p>
         <div class="actions">
           <a class="cta" href="#news">Смотреть новости</a>
           <a class="cta" href="#gallery">Открыть галерею</a>
