--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="hero-inner">
       <div class="reveal">
         <span class="chip"><i></i> DREGO DESIGN</span>
-        <h1>Красиво. Быстро. Понятно.<br/>Анимации без перегруза.</h1>
+        <h1>A. M. A.<br/>MAM.</h1>
         <p>Сайт созданный для нашего сквада <code>.AMAMAM.</code>.</p>
         <div class="actions">
           <a class="cta" href="#news">Смотреть новости</a>
