--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <header id="home" class="hero">
     <div class="hero-inner">
       <div class="reveal">
-        <span class="chip"><i></i> DREGO DESIGN</span>
-        <h1>A. M. A.<br/>MAM.</h1>
-        <p>Сайт созданный для нашего сквада <code>.AMAMAM.</code>.</p>
+        <span class="chip"><i></i>made by Drego</span>
+        <h1>AMAMAM<br/></h1>
+        <p>Сайт созданный для нашего сквада <code>⛰︎</code>.</p>
         <div class="actions">
           <a class="cta" href="#news">Смотреть новости</a>
           <a class="cta" href="#gallery">Открыть галерею</a>
@@ -67,11 +67,11 @@
     <section id="contact" class="container">
       <h2 class="reveal">Контакты</h2>
       <div class="card reveal">
-        <div class="eyebrow">Напиши нам</div>
+        <div class="eyebrow">Залетай к нам в дискорд</div>
         <h3>Discord</h3>
         <p>Залетай: <a id="discordLink" href="#" target="_blank" rel="noopener">discord.gg/your-link</a></p>
         <div style="height:8px"></div>
-        <div class="eyebrow">Email</div>
+        <div class="eyebrow">Наш Email</div>
         <p><a id="emailLink" href="mailto:admin@example.com">admin@example.com</a></p>
       </div>
     </section>
@@ -80,7 +80,7 @@
   <footer>
     <div class="footer-inner">
       <span id="footerSlogan">“Услышал тебя родной”</span>
-      <span id="year"></span> © <span class="brand-title">AMAMAM Squad</span>
+      <span id="year"></span> © am² <span class="brand-title">AMAMAM Squad</span>
     </div>
   </footer>
 
