--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AMAMAM Squad — Dark Red</title>
-  <meta name="description" content="Тёмный минималистичный сайт с красными акцентами, анимациями и удобной навигацией. Готов для GitHub Pages." />
+  <meta name="description" content="minimalistichnyy site dlya amamam" />
   <link rel="preload" href="css/style.css" as="style">
   <link rel="stylesheet" href="css/style.css">
 </head>
