--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <a class="cta" href="#gallery">Открыть галерею</a>
         </div>
       </div>
+      <!-- ✅ исправленный баннер -->
       <div class="banner reveal" aria-label="Баннер">
-        <span class="pulse"></span>
+        <img id="bannerImg" src="" alt="Баннер"/>
       </div>
     </div>
   </header>
